src/libs/qmljs/qmljsutils.cpp
@@ -28,6 +28,8 @@
 #include "parser/qmljsast_p.h"
 
 #include <QColor>
+#include <QDir>
+#include <QRegularExpression>
 
 using namespace QmlJS;
 using namespace QmlJS::AST;
@@ -193,6 +195,67 @@ UiQualifiedId *QmlJS::qualifiedTypeNameId(Node *node)
 DiagnosticMessage QmlJS::errorMessage(const AST::SourceLocation &loc, const QString &message)
 {
     return DiagnosticMessage(Severity::Error, loc, message);
+}
+
+/*!
+ * \brief Permissive validation of a string representing a module version.
+ * \param version
+ * \return True if \p version is a valid version format (<digit(s)>.<digit(s)>) or if it is empty.
+ *         False otherwise.
+ */
+bool QmlJS::maybeModuleVersion(const QString &version) {
+    QRegularExpression re(QLatin1String("^\\d+\\.\\d+$"));
+    return version.isEmpty() || re.match(version).hasMatch();
+}
+
+/*!
+ * \brief Get the path of a module
+ * \param name
+ * \param version
+ * \param importPaths
+ *
+ * Given the qualified \p name and \p version of a module, look for a valid path in \p importPaths.
+ * Most specific version are searched first, the version is searched also in parent modules.
+ * For example, given the \p name QtQml.Models and \p version 2.0, the following directories are
+ * searched in every element of \p importPath:
+ *
+ * - QtQml/Models.2.0
+ * - QtQml.2.0/Models
+ * - QtQml/Models.2
+ * - QtQml.2/Models
+ * - QtQml/Models
+ *
+ * \return The module paths if found, an empty string otherwise
+ * \see qmlimportscanner in qtdeclarative/tools
+ */
+QString QmlJS::modulePath(const QString &name, const QString &version,
+                          const QStringList &importPaths)
+{
+    Q_ASSERT(maybeModuleVersion(version));
+
+    const QStringList parts = name.split(QLatin1Char('.'), QString::SkipEmptyParts);
+    auto mkpath = [] (const QStringList &xs) -> QString { return xs.join(QLatin1Char('/')); };
+
+    QString candidate;
+
+    for (QString ver = version; ; ver.remove(QRegularExpression(QLatin1String("\\.?\\d+$")))) {
+        for (const QString &path: importPaths) {
+            if (ver.isEmpty()) {
+                candidate = QDir::cleanPath(QString::fromLatin1("%1/%2").arg(path, mkpath(parts)));
+                return QDir(candidate).exists() ? candidate : QString();
+            } else {
+                for (int i = parts.count() - 1; i >= 0; --i) {
+                    candidate = QDir::cleanPath(
+                                QString::fromLatin1("%1/%2.%3/%4").arg(path,
+                                                                       mkpath(parts.mid(0, i + 1)),
+                                                                       ver,
+                                                                       mkpath(parts.mid(i + 1))));
+                    if (QDir(candidate).exists())
+                        return candidate;
+                }
+            }
+        }
+    }
 }
 
 bool QmlJS::isValidBuiltinPropertyType(const QString &name)
